# imsi-catcher-detection

./: .gitignore  README
Papers/: quellen.txt
Src/: .gitignore  status
Src/CatcherGUI/: .project  .pydevproject
Src/PyCatcher/: .project  .pydevproject  foo.py
Src/osmolib/: .cproject  .project
Src/osmolib/src/host/layer23/src/misc/: Makefile.am  app_catcher.c  catcher  catcher.c  enc_scan  enc_scan.c  enc_scan_old.c  pch_scan  pch_scan.c
Tex/: Structure.txt
Tex/Content/: Abstract.tex  Abstract.tex~  Acknowledgements.tex  Appendix.tex  Appendix.tex~  Bibliography.bib  Conclusion.tex  Conclusion.tex~  Declaration.tex  Dedication.tex  Detection.tex  Detection.tex~  Evaluation.tex  Evaluation.tex~  GSM.tex  GSM_short.tex  GSM_short.tex~  Motivation.tex
Tex/Images/: 3gpp.jpg~  Architecture.vsd  Architecture_software.vsd  Authentication.vsd  Bursts.vsd  Channels.vsd  Cipher.vsd  Frames.vsd  ICDS.psd  IMSMICatcher.vsd  Mapping.vsd  OsmoStructure.vsd  Paging.vsd  Sectorised.vsd  TDMAFDMA.vsd  Template.vsd  Umbrella.vsd  catcher_attack.vsd  cells.vsd  flowchart.vsd  replace_attack.vsd  standart_config.vsd  template.graphml
Tex/Master/: Glossary.tex  Makefile~  Master.acn  Master.acr  Master.alg  Master.aux  Master.bbl  Master.blg  Master.dvi  Master.glg  Master.ist  Master.lof  Master.lot  Master.tex  Master.tex~  Master.toc  Titlepage.tex  VCPref-main.tex  Vaucanson-G.tex  build  titlepage.sty  unittest.py
Tex/Presentation/: Architecture.vsd  Neighbours.vsd  beamerouterthemezusatz.sty  neighbourhood1.dot  neighbourhood2.dot  presentation.tex  test.aux  test.nav  (+1 more)
(+136 files in other folders)
